<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.job_details.JobDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/tv_title"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/title"
            android:textStyle="bold"
            android:textSize="35sp"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/tv_parent_title"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/parent_title"
            android:textStyle="italic"
            android:textSize="20sp"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/tv_description_title"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/description"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/tv_description"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/description"
            android:textSize="20sp"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/tv_related_skills"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/related_skills"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/tv_related_skill_1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/related_skill_1"
            android:textSize="20sp"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp" />
        <TextView
            android:id="@+id/tv_related_skill_2"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/related_skill_2"
            android:textSize="20sp"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp" />
        <TextView
            android:id="@+id/tv_related_skill_3"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/related_skill_3"
            android:textSize="20sp"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp" />
        <TextView
            android:id="@+id/tv_related_skill_4"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/related_skill_4"
            android:textSize="20sp"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp" />
        <TextView
            android:id="@+id/tv_related_skill_5"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/related_skill_5"
            android:textSize="20sp"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>