<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.create_job.CreateJobActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/tv_create_job_title"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/create_new_job"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/tv_title"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/title"
            android:textSize="20sp"
            android:layout_margin="10dp"/>
        <EditText
            android:id="@+id/et_title"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/tv_normalized"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/normalized_job_title"
            android:textSize="20sp"
            android:layout_margin="10dp"/>
        <EditText
            android:id="@+id/et_normalized"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"
            android:layout_margin="10dp"/>
        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/add"
            android:layout_gravity="center"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>